<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <View
        android:id="@+id/v1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/PrimaryBlue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/abril_fatface"
        android:padding="20dp"
        android:text="@string/welcome_crm"
        android:textColor="@color/white"
        android:textSize="35sp" />

    <View
        android:id="@+id/v2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/v1"
        android:background="@drawable/ic_wave" />

    <EditText
        android:id="@+id/UserName"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_below="@id/v2"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="username"
        android:background="@drawable/round_border"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="16dp" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_below="@id/UserName"
        android:layout_margin="16dp"
        android:autofillHints="password"
        android:background="@drawable/round_border"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="148dp"
        android:layout_height="60dp"
        android:layout_below="@+id/Password"
        android:layout_centerInParent="true"
        android:background="@drawable/round_border"
        android:backgroundTint="@color/PrimaryBlue"
        android:fontFamily="sans-serif"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp" />
</RelativeLayout>